--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,33 @@
     <string name="text_signin">SIGN IN</string>
     <string name="register">REGISTER</string>
     <string name="text_register">Register</string>
+    <string name="date">9 Feb 2021</string>
+    <string name="error_text">Not empty</string>
+    <string name="error_pass">Password Mismatch</string>
+    <string name="text_user">Users</string>
+    <string name="error_register">Register Failed</string>
+    <string name="highlight">Synopsis Sweet Home, The Threat of Human and Monster Desire</string>
+    <string name="maria_sora">Maria Sora</string>
+    <string name="all">All</string>
+    <string name="international">International</string>
+    <string name="media">Media</string>
+    <string name="magazine">Magazine</string>
+    <string name="business">Business</string>
+    <string name="title_items">Coronavirus Update</string>
+    <string name="dummy_tgl">21/01/2021</string>
+    <string name="floating_button">Floating Button</string>
+    <string name="content_desc">Sweet Home is a new Korean series that combines mystery, thriller, and fantasy genres. The series is studded with many stars such as Song Kang, Lee Do-hyun, Lee Jin-wook, and Lee Si-young. Here\'s a synopsis of Sweet Home. Sweet Home is a series that will have a forward and backward plot. This series begins with the depiction of a situation where the world suddenly turns terrible. Humans can turn into monsters because of the passion and ambition within them. Several symptoms are shown before turning into a monster, ranging from severe nosebleeds, wild fiery behavior, hallucinations, loss of consciousness, the color of the eyeballs turning black, and finally turning into a monster and threatening human life.</string>
+    <string name="email_profile">mariasora@gmail.com</string>
+    <string name="preference">Preference</string>
+    <string name="account">Account</string>
+    <string name="language">Language</string>
+    <string name="change_account">Change Account</string>
+    <string name="edit_account">Edit Account</string>
+    <string name="notification">Notification</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="bookmark">Bookmark</string>
+    <string name="setting">Setting</string>
+    <string name="privacy_and_setting">Privacy and Setting</string>
+    <string name="logout">Logout</string>
+    <string name="breaking_news">Breaking News</string>
 </resources>
